--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -27,7 +27,6 @@ $border: 1rem solid $primary;
 }
 @mixin titleText($titleSize) {
     font-size: $titleSize;
-    text-transform: capitalize;
     color: $black;
 }
 @mixin graphText($graphSize) {
@@ -73,9 +72,7 @@ section {
     z-index: 1000;
     
     .logo {
-        margin-right: auto;
-        width: 6rem;
-        height: 6rem;  
+        margin-right: auto;  
     }
     .navbar {
         position: relative;
@@ -119,19 +116,20 @@ section {
 
 .btn {
     padding: 1rem 2rem;
-    border-color: $orange;
-    border: 1px solid $orange;
     cursor: pointer;
-    background-color: transparent;
+    background-color: red;
     font-size: 1.7rem;
-    color: $orange;
+    color: $white;
     box-shadow: $box-shadow;
     display: inline-block;
+    border-radius: 2rem;
 
     &:hover {
         transform: scale(1.1);
-        background-color: $orange;
-        color: $white;
+        background-color: transparent;
+        border-color: red;
+        border: 1px solid red;
+        color: red;
     }
 }
 
@@ -141,6 +139,8 @@ section {
     justify-content: center;
     flex-wrap: wrap;
     gap: 15rem;
+    background: url(../assets/home-background.png) no-repeat;
+    background-size: 100vw 80vh;
     .image {
         flex: 1 1 40rem;
         padding: 0 2.5rem;
@@ -181,6 +181,9 @@ section {
                 text-transform: none;
             }
         }
+        .btn{
+            width: 20rem;
+        }
     }
     
 }
@@ -219,19 +222,17 @@ section {
             font-size: 2.7rem;
         }
         h1{
-            font-size: 1.6rem;
+
+            @include titleText(1.7rem);
         }
         p{
-            font-size: 1.3rem;
+            font-size: 1.4rem;
+            color: $text-base;
         }
     }
     }
 }
 }
-
-
-
-
 .chamariz {
     display: flex;
     align-items: center;
@@ -256,6 +257,9 @@ section {
         p{
             @include graphText(1.7rem);
             padding: 1.5rem 0;
+        }
+        .preco{
+            font-size: 7rem;
         }
     }
     .btn{
@@ -292,7 +296,7 @@ section {
 }
 
 .depoimentos{
-    min-height: 100vh;
+    //min-height: 100vh;
     position: relative;
 .box-depoimento{
         
@@ -319,10 +323,58 @@ section {
 }
 }
 
+.produtos{
+    .prod-titulo{
+        @include titleText(1.7rem);
+    }
+    .box-produtos{
+        @include grid(35rem);
+        padding-top: 4rem;
+        .prod-content{
+            display: flex;
+            align-items: center;
+            h2{
+                font-size: 2.7rem;
+                padding-right: 1rem;
+                color: green;
+            }
+            h1{
+                @include graphText(1.6rem)
+            }
+        }
+    }
+}
 
-
-
-
+.chama2 {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 15rem;
+    margin-top: 5rem;
+    
+    .chama2-img{
+        flex: 1 1 40rem;
+        padding: 0 2.5rem;
+        img{
+            width: 100%;
+        }
+    }
+    .chama-content{
+        flex: 1 1 40rem;
+        text-align: center;
+        h1{
+            @include titleText(2.4rem);
+            text-transform: none;
+        }
+        h3{
+            @include titleText(7rem);
+            padding-bottom: 2rem;
+        }
+    }
+    .btn{
+        width: 70%;
+    }
+}
 
 
 
@@ -405,7 +457,7 @@ section {
     }
 
     .depoimentos{
-        
+    
         .box-depoimento{
             .box{
                 p{
@@ -475,6 +527,10 @@ section {
     }
     .swiper-button-next::after {
         display: none;       
+    }
+    .chama2 {
+        gap: 5rem;
+        margin-top: 2rem;
     }
 }
 
